IMproved for Java 21